[tool.poetry]
name = "nolabsserver"
version = "1.2.1"
description = ""
authors = ["JaktensTid <jaktenstid1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.25.0"
fastapi = "^0.109.0"
numpy = "^1.26.3"
requests = "^2.31.0"
obonet = "^1.0.0"
setuptools = "^69.0.3"
rdkit = "^2023.9.4"
python-json-logger = "^2.0.7"
python-dateutil = "^2.8.2"
python-slugify = "^8.0.2"
python-multipart = "^0.0.6"
msa-light-microservice = {path = "microservices/msa_light/client"}
p2rank-microservice = {path = "microservices/p2rank/client"}
jupyter = "^1.0.0"
esmfold-light-microservice = {path = "microservices/esmfold_light/client"}
esmfold-microservice = {path = "microservices/esmfold/client"}
diffdock-microservice = {path = "microservices/diffdock/client"}
aiohttp = "^3.9.3"
dependency-injector = "^4.41.0"
leaf-basedlabs = "^0.0.9"
rosettafold-microservice = {path = "microservices/rosettafold/client"}
reinvent-microservice = {path = "microservices/reinvent/client"}
mongoengine = "^0.28.2"
pydantic-settings = "^2.2.1"
biopython = "^1.83"
localisation-microservice = {path = "microservices/localisation/client"}
solubility-microservice = {path = "microservices/solubility/client"}
conformations-microservice = {path = "microservices/conformations/client"}
gene-ontology-microservice = {path = "microservices/gene_ontology/client"}
protein-design-microservice = {path = "microservices/protein_design/client"}
biobuddy-microservice = {path = "microservices/biobuddy/client"}
external-data-query-microservice = {path = "microservices/external_data_query/client"}
redis = "^5.0.7"

[project]
dependencies = [
    "fastapi",
    "mypy",
    "pydantic",
    "obonet",
    "jsonpickle",
    "python-multipart",
    "rdkit"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
