[tool.poetry]
name = "nolabs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
celery = {extras = ["pytest"], version = "^5.4.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
testcontainers = {extras = ["mongodb"], version = "^4.8.1"}
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
