[tool.poetry]
name = "Esmfold-light"
version = "1.0.0"
description = ""
authors = ["JaktensTid <jaktenstid1@gmail.cosam>","iT"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
fastapi = "^0.112.2"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
celery = {extras = ["redis"], version = "^5.4.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
