[tool.poetry]
name = "Reinvent"
version = "1.0.0"
description = ""
authors = ["Igor Bruev <jaktenstid1@gmail.com>","Timur Ishmuratov <ishmuratov7timur7@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
fastapi = "^0.115.0"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"
uvicorn = "^0.30.6"
python-dotenv = "^1.0.1"
celery = {extras = ["redis"], version = "^5.4.0"}
toml = "^0.10.2"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
