[tool.poetry]
name = "Esmfold-light"
version = "1.0.0"
authors = ["Igor Bruev", "Timur Ishmuratov"]
description = "A microservice using esmfold-light for protein folding."
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
mongoengine = "^0.24.2"  # Replace with the actual version you prefer
requests = "^2.28.1"

[tool.poetry.group.airflow.dependencies]
apache-airflow = {extras = ["celery", "redis"], version = "^2.9.3"}
psycopg2-binary = "^2.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"